 * Minor improvements in Cassandra shutdown and startup logs (CASSANDRA-19818)
 * Deprecate and ignore use_deterministic_table_id (CASSANDRA-19809)
 * Prioritize built indexes in IndexStatusManager (CASSANDRA-19400)
 * Add java.base/java.lang.reflect among opens for jvm11-client.options (CASSANDRA-19780)
Merged from 4.0:
 * Do not spam log with SSLExceptions (CASSANDRA-18839)


5.0-rc2
 * Fix direct IO support always being evaluated to false upon the first start of a node (CASSANDRA-19779)
 * Memtable allocation type unslabbed_heap_buffers_logged will cause an assertion error for TrieMemtables and SegmentedTrieMemtables (CASSANDRA-19835)
Merged from 4.0:
 * Use default commitlog settings in test YAMLs (CASSANDRA-19830)


5.0-rc1
 * Move bcpkix-jdk18on to build dependencies, update to 1.78 and explicitly enumerate transitive dependencies (CASSANDRA-19739)
 * Avoid streams in the common case for UpdateTransaction creation (CASSANDRA-19675)
 * Only wait until native_transport_timeout for dispatcher to finish (CASSANDRA-19697)
 * Disable chronicle analytics (CASSANDRA-19656)
 * Replace Stream iteration with for-loop for StorageProxy::updateCoordinatorWriteLatencyTableMetric (CASSANDRA-19676)
 * Enforce metric naming contract if scope is used in a metric name (CASSANDRA-19619)
 * Avoid reading of the same IndexInfo from disk many times for a large partition (CASSANDRA-19557)
 * Resolve the oldest hints just from descriptors and current writer if available (CASSANDRA-19600)
 * Optionally fail writes when SAI refuses to index a term value exceeding configured term max size (CASSANDRA-19493)
 * Vector search can restrict on clustering keys when filtering isn't required (CASSANDRA-19544)
 * Fix FBUtilities' parsing of gcp cos_containerd kernel versions (CASSANDRA-18594)
 * Clean up KeyRangeIterator classes (CASSANDRA-19428)
 * Warn clients about possible consistency violations for filtering queries against multiple mutable columns (CASSANDRA-19489)